assets/css/styles.css
body {
    font-family: monospace, monospace;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 30px;
    padding: 20px;
}

main {
    width: 100%;
    max-width: 700px;
}

.text-align-center {
    text-align: center;
}

article {
    line-height: 1.8;
}

aside {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.author-image-container {
    text-align: center;
}

.author-image {
    border-radius: 50%;
}

.author-name {
    padding: 10px;
}

.svg-email-protection {
    width: 210px;
    vertical-align: middle;
}

nav ul {
    list-style: none;
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    gap: 20px;
}

.list-page--item-title {
    margin-bottom: 0;
}

article figure {
    margin: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
}

article figure img {
    margin: 0;
    object-fit: scale-down;
    max-width: 100%;
}

article figcaption p {
    margin: 0 20px;
    text-align: center;
    font-size: small;
}

article div.highlight pre {
    overflow: auto;
    padding: 8px;
}

